make sure tds align left

--- a/s_style/sass/styles.scss
+++ b/s_style/sass/styles.scss
@@ -116,5 +116,8 @@ table{
     tr.altRow td {
       background-color: #e3ecf6;
     }
+    td{
+      text-align: left;
+    }
   }
 }
